--- a/pathfinding/src/App.css
+++ b/pathfinding/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: #1a1a1d;
 }
 
 .App-logo {
@@ -7,14 +8,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #1a1a1d;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #1a1a1d;
 }
 
 .App-link {
