--- a/pathfinding/src/PathfindingVisualizer/Node/Node.css
+++ b/pathfinding/src/PathfindingVisualizer/Node/Node.css
@@ -1,7 +1,7 @@
 .node {
-  width: 25px;
-  height: 25px;
-  outline: 1px solid rgb(175, 216, 248);
+  width: 30px;
+  height: 30px;
+  outline: 1px solid #4e4e50;
   display: inline-block;
 }
 
@@ -47,7 +47,7 @@
 }
 
 .node-wall {
-  background-color: rgb(12, 53, 71);
+  background-color: #c3073f;
 }
 
 .node-shortest-path {
@@ -64,16 +64,16 @@
 @keyframes shortestPath {
   0% {
     transform: scale(0.6);
-    background-color: rgb(255, 254, 106);
+    background-color: white;
   }
 
   50% {
     transform: scale(1.2);
-    background-color: rgb(255, 254, 106);
+    background-color: white;
   }
 
   100% {
     transform: scale(1);
-    background-color: rgb(255, 254, 106);
+    background-color: white;
   }
 }
